# fast-hydra

./: README.md  pyproject.toml  ruff.toml
src/fast_hydra/: __init__.py  hydra_multivariate.py  sparse_scaler.py
