[project]
name = "fast-hydra"
version = "0.1.0"
description = "GPU-optimized PyTorch implementation of HYDRA time-series feature extraction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
